--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="darkreader-lock">
     <meta name="darkreader" content="disable-please">
     <title>cljs-atc</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
   <body>
     <noscript>
