--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       Javascript is required to view this page.
     </noscript>
     <div id="app"></div>
+    <script type="module" src="js/imports.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
