Fix JS errors due to missing `defer` on the main.js script

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <div id="app"></div>
     <script type="module" src="js/imports.js"></script>
-    <script src="js/main.js"></script>
+    <script defer src="js/main.js"></script>
   </body>
 </html>
 
