--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <div id="app"></div>
     <script type="module" src="js/imports.js"></script>
-    <script defer src="js/main.js"></script>
+    <script type="module" defer src="js/main.js"></script>
   </body>
 </html>
 
