Setup a polyfill to fix mic input
Vite doesn't set up a `global` value, which is why we needed the other
patch. It's not entirely clear to me what provided the process.nextTick
polyfill before, but readable-stream seems to need that, too, so I've
added it by hand.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
       Javascript is required to view this page.
     </noscript>
     <div id="app"></div>
+    <script>
+    window.process ??= {
+      nextTick(callback, ...args) {
+        queueMicrotask(callback.bind(undefined, ...args));
+      }
+    };
+    </script>
     <script type="module" src="js/imports.js"></script>
     <script type="module" defer src="js/main.js"></script>
   </body>
